feat(backend): add swagger docs
